<resources>
    <string name="cqyt_quantity_custom">件数</string>
    <string name="cqyt_total_quantity_custom">累计件数</string>
    <string name="cqyt_ref_num">业务单据</string>
    <string name="cqyt_s_total_quantity">入库累计数量</string>
    <string name="cqyt_h_total_quantity">出库累计数量</string>
    <string name="cqyt_xj_type">巡检类型</string>
    <string name="cqyt_xj_date">巡检日期</string>
    <string name="cqyt_xj_person">巡检人</string>
    <string name="cqyt_xj_location">巡检货位</string>
    <string name="cqyt_xj_path">巡检路线</string>
    <string name="cqyt_xj_ins_door">库区、办公室门窗有无启动</string>
    <string name="cqyt_xj_ins_material">物资有无异状</string>
    <string name="cqyt_xj_ins_equipe">消防器材、苫垫、标牌是否完好</string>
    <string name="cqyt_xj_ins_location">货架、场地是否整洁</string>
    <string name="cqyt_xj_ins_safe">有无不安全因素</string>

    <string name="cqyt_xj_ins_document">资料是否整理齐全</string>
    <string name="cqyt_xj_ins_office">办公用品、工具是否归位</string>
    <string name="cqyt_xj_ins_exception">物资有无异动</string>
    <string name="cqyt_xj_ins_power">电源是否关闭</string>
    <string name="cqyt_xj_ins_lock">库区、办公室门窗是否关严锁好</string>
    <string name="cqyt_delivery_order">提货单</string>
    <string name="cqyt_unqualified_quantity">不合格数量</string>
    <string name="cqyt_shop_condition">装运条件</string>
    <string name="cqyt_declared_quantity">报检数量</string>
    <string name="cqyt_declared_unit">报检单位</string>
    <string name="cqyt_class">班</string>
    <string name="cqyt_post">岗位</string>
    <string name="cqyt_manufacturer">生产厂家</string>
    <string name="cqyt_inspection_unit">检验单位</string>
    <string name="cqyt_inspection_date">报检时间</string>
    <string name="cqyt_inspection_standard">检验标准及特殊要求</string>
    <string name="cqyt_inspection_result">外观检验结果</string>
    <string name="cqyt_return_quantity">采购退货数量</string>
    <string name="cqyt_ins_weather">天气</string>
    <string name="cqyt_ins_temperature">温度</string>
    <string name="cqyt_ins_humidity">湿度</string>
    <string name="cqyt_ins_clean">库区地面是否干净整洁</string>
    <string name="cqyt_ins_quantity">帐、卡、物数量是否一致</string>
    <string name="cqyt_ins_chemical">化学品物资码垛是否合理、牢固、苫垫是否严密</string>
    <string name="cqyt_ins_fire">消防设施（器材）、防护用具是否有效、消防通道是否通畅</string>
    <string name="cqyt_ins_hazardous">危化品包装是否有破损或者渗漏等</string>
    <string name="cqyt_ins_h">库区温度与湿度是否符合库存维护批储存要求</string>
    <string name="cqyt_ins_flammable">易燃化学物资封口是否严密，有无挥发或者渗漏、变质、溶化或者变色等现象</string>
    <string name="cqyt_ins_effective">化学品是否超过有效期</string>
    <string name="cqyt_transfer_date">取样日期</string>
    <string name="cqyt_quantity">数量</string>

</resources>
